cmake_minimum_required(VERSION 3.16...3.28 FATAL_ERROR)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/modules")

project(Samples VERSION 1.0.0 LANGUAGES  C CXX)

include(AddExe)

add_subdirectory(glad)
add_subdirectory(HelloWindow)
add_subdirectory(Triangle)
add_subdirectory(Triangle2)
add_subdirectory(Triangle3)
add_subdirectory(Triangle4)
add_subdirectory(Rectangle)
add_subdirectory(Uniform)
add_subdirectory(MoreAttrs)
add_subdirectory(ShaderClass)
add_subdirectory(StbImage)
add_subdirectory(Texture)
add_subdirectory(TextureUnit)
add_subdirectory(TextureUnit1)
add_subdirectory(TextureUnit2)
add_subdirectory(Transform)
add_subdirectory(Transform2)
add_subdirectory(Coordnate)
add_subdirectory(Coordnate2)
add_subdirectory(Coordnate3)
add_subdirectory(Camera)
add_subdirectory(CameraWalk)
add_subdirectory(CameraMouseWalk)
add_subdirectory(CameraMouseWalk2)