cmake_minimum_required(VERSION 3.16...3.28 FATAL_ERROR)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/modules")

project(Samples VERSION 1.0.0 LANGUAGES  C CXX)

include(AddExe)

add_subdirectory(glad)
add_subdirectory(HelloWindow)
add_subdirectory(Triangle)
add_subdirectory(Triangle2)
add_subdirectory(Triangle3)
add_subdirectory(Triangle4)
add_subdirectory(Rectangle)
add_subdirectory(Uniform)
add_subdirectory(MoreAttrs)
add_subdirectory(ShaderClass)
add_subdirectory(StbImage)
add_subdirectory(Texture)
add_subdirectory(TextureUnit)
add_subdirectory(TextureUnit1)
add_subdirectory(TextureUnit2)
add_subdirectory(Transform)
add_subdirectory(Transform2)
add_subdirectory(Coordnate)
add_subdirectory(Coordnate2)
add_subdirectory(Coordnate3)
add_subdirectory(Camera)
add_subdirectory(CameraWalk)
add_subdirectory(CameraMouseWalk)
add_subdirectory(CameraMouseWalk2)
add_subdirectory(LightDiffuse)
add_subdirectory(LightAmbient)
add_subdirectory(LightSpecularHighlight)
add_subdirectory(LightSpecularHighlight2)
add_subdirectory(LightGouraud)
add_subdirectory(Material)
add_subdirectory(DiffuseMap)
add_subdirectory(SpecularMap)
add_subdirectory(SpecularMap2)
add_subdirectory(SpecularMap3)
add_subdirectory(EmissionMap)
add_subdirectory(EmissionMap2)
add_subdirectory(LightDirection)
add_subdirectory(LightPoint)
add_subdirectory(LightSpot)
add_subdirectory(MultipleLights)
add_subdirectory(MultipleLights_DESERT)
add_subdirectory(MultipleLights_FACTORY)
add_subdirectory(MultipleLights_HORROR)
add_subdirectory(MultipleLights_LAB)
add_subdirectory(ModelLoading)
add_subdirectory(DepthTesting)
add_subdirectory(StencilTesting)
add_subdirectory(BlendingDiscard)
add_subdirectory(BlendingSorted)
add_subdirectory(FaceCulling)
add_subdirectory(FrameBuffers)
add_subdirectory(RearviewMirror)
add_subdirectory(CubemapsSkybox)
add_subdirectory(CubemapsEnvironmentMapping)
add_subdirectory(AdvancedGlslUbo)
add_subdirectory(GeometryShaderHouses)
add_subdirectory(GeometryShaderExploding)
add_subdirectory(GeometryShaderNormals)
add_subdirectory(InstancingQuads)